--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>React and TypeScript</title>
+  <title>React Boilerplate</title>
 </head>
 
 <body>
@@ -13,7 +13,7 @@
   <script src="https://unpkg.com/react-dom@16.8.2/umd/react-dom.development.js" type="text/javascript"></script>
 
   <!-- Compiled TypeScript -->
-  <script src="dist/bundle.js" type="text/javascript"></script>
+  <!-- <script src="dist/bundle.js" type="text/javascript"></script> -->
 </body>
 
 </html>
