--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>React Boilerplate</title>
+  </head>
 
-<head>
-  <title>React Boilerplate</title>
-</head>
+  <body>
+    <div id="root"></div>
 
-<body>
-  <div id="root"></div>
+    <!-- Dependencies -->
+    <script
+      src="https://unpkg.com/react@16.8.2/umd/react.development.js"
+      type="text/javascript"
+    ></script>
+    <script
+      src="https://unpkg.com/react-dom@16.8.2/umd/react-dom.development.js"
+      type="text/javascript"
+    ></script>
 
-  <!-- Dependencies -->
-  <script src="https://unpkg.com/react@16.8.2/umd/react.development.js" type="text/javascript"></script>
-  <script src="https://unpkg.com/react-dom@16.8.2/umd/react-dom.development.js" type="text/javascript"></script>
-
-  <!-- Compiled TypeScript -->
-  <!-- <script src="dist/bundle.js" type="text/javascript"></script> -->
-</body>
-
+    <!-- Compiled TypeScript -->
+    <!-- <script src="dist/bundle.js" type="text/javascript"></script> -->
+  </body>
 </html>
